feat: API 엔드포인트 수정 작업